[gd_scene load_steps=8 format=3 uid="uid://dvsma32athakd"]

[ext_resource type="Script" path="res://home.gd" id="1_17b5u"]
[ext_resource type="PackedScene" uid="uid://cc6cv1wniis0w" path="res://PlayerCharacters/playerBase.tscn" id="1_fwcts"]
[ext_resource type="PackedScene" uid="uid://ch8xvux0gepx4" path="res://UIs/testing_ui.tscn" id="4_d6rx7"]
[ext_resource type="Texture2D" uid="uid://dviqwbxkko56t" path="res://Assets/Background/291059-brown-background-2048x1536-computer.jpg" id="4_juoql"]
[ext_resource type="PackedScene" uid="uid://b46k4iubuk1le" path="res://Objects/vault.tscn" id="4_rd2sd"]
[ext_resource type="PackedScene" uid="uid://btj01t6tvv5mo" path="res://UIs/main_ui.tscn" id="5_yowc3"]
[ext_resource type="PackedScene" uid="uid://c00xhenjpbna7" path="res://UIs/purchasing_ui.tscn" id="7_cjegx"]

[node name="Home" type="Node2D"]
script = ExtResource("1_17b5u")

[node name="Players" type="Node2D" parent="."]

[node name="PlayerBase" parent="Players" instance=ExtResource("1_fwcts")]

[node name="StartingPosition" type="Marker2D" parent="."]
position = Vector2(559, 973)

[node name="Ground" type="Node2D" parent="."]
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Vault" parent="Ground" instance=ExtResource("4_rd2sd")]
position = Vector2(565, 1087)

[node name="Floor" type="Sprite2D" parent="Ground"]
modulate = Color(0, 0.678431, 0, 1)
z_index = -1
position = Vector2(554.5, 600)
scale = Vector2(0.680176, 0.949219)
texture = ExtResource("4_juoql")

[node name="OuterWalls" type="StaticBody2D" parent="Ground"]
collision_layer = 16
collision_mask = 31

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Ground/OuterWalls"]
polygon = PackedVector2Array(1152, 0, 1154, 1154, -1, 1154, 0, 0, 1145, 0, 1142, -78, -116, -76, -156, 1269, 1294, 1257, 1143, -79, 1145, 0)

[node name="Projectiles" type="Node2D" parent="."]

[node name="UIs" type="Node" parent="."]

[node name="MainUI" parent="UIs" instance=ExtResource("5_yowc3")]

[node name="TestingUI" parent="UIs" instance=ExtResource("4_d6rx7")]
visible = false

[node name="PurchasingUI" parent="UIs" instance=ExtResource("7_cjegx")]
visible = false

[node name="EnemySpawnLocations" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="EnemySpawnLocations"]
position = Vector2(1130, 130)

[node name="Marker2D2" type="Marker2D" parent="EnemySpawnLocations"]
position = Vector2(952, 50)

[node name="Marker2D3" type="Marker2D" parent="EnemySpawnLocations"]
position = Vector2(743, 46)

[node name="Marker2D4" type="Marker2D" parent="EnemySpawnLocations"]
position = Vector2(310, 89)

[node name="Marker2D5" type="Marker2D" parent="EnemySpawnLocations"]
position = Vector2(514, 52)

[node name="Marker2D6" type="Marker2D" parent="EnemySpawnLocations"]
position = Vector2(89, 160)

[node name="Enemies" type="Node2D" parent="."]

[node name="Enemy1Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Enemy2Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Enemy3Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Enemy4Timer" type="Timer" parent="."]
wait_time = 8.0

[node name="Enemy5Timer" type="Timer" parent="."]
wait_time = 7.0

[node name="Turrets" type="Node2D" parent="."]

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="go_to_vault" from="Players/PlayerBase" to="." method="enemy_vault_recalibration"]
[connection signal="hit_player" from="Players/PlayerBase" to="." method="_on_player_base_hit_player"]
[connection signal="shootBaseBullet" from="Players/PlayerBase" to="." method="_on_player_base_shoot_base_bullet"]
[connection signal="vault_entered" from="Ground/Vault" to="." method="_on_vault_vault_entered"]
[connection signal="BulletSpeedButtonPressed" from="UIs/MainUI" to="." method="_on_main_ui_bullet_speed_button_pressed"]
[connection signal="HealthButtonPressed" from="UIs/MainUI" to="." method="_on_main_ui_health_button_pressed"]
[connection signal="NextRound" from="UIs/MainUI" to="." method="_on_main_ui_next_round"]
[connection signal="ReloadButtonPressed" from="UIs/MainUI" to="." method="_on_main_ui_reload_button_pressed"]
[connection signal="StrengthButtonPressed" from="UIs/MainUI" to="." method="_on_main_ui_strength_button_pressed"]
[connection signal="correct" from="UIs/TestingUI" to="." method="_on_testing_ui_correct"]
[connection signal="quiz" from="UIs/TestingUI" to="." method="_on_testing_ui_quiz"]
[connection signal="BuyBomber" from="UIs/PurchasingUI" to="." method="_on_purchasing_ui_buy_bomber"]
[connection signal="BuyBulletSpeed" from="UIs/PurchasingUI" to="." method="_on_purchasing_ui_buy_bullet_speed"]
[connection signal="BuyHealer" from="UIs/PurchasingUI" to="." method="_on_purchasing_ui_buy_healer"]
[connection signal="BuyReload" from="UIs/PurchasingUI" to="." method="_on_purchasing_ui_buy_reload"]
[connection signal="BuySpeed" from="UIs/PurchasingUI" to="." method="_on_purchasing_ui_buy_speed"]
[connection signal="BuyStrength" from="UIs/PurchasingUI" to="." method="_on_purchasing_ui_buy_strength"]
[connection signal="BuyTurret" from="UIs/PurchasingUI" to="." method="_on_purchasing_ui_buy_turret"]
[connection signal="buy" from="UIs/PurchasingUI" to="." method="_on_purchasing_ui_buy"]
[connection signal="set_labels" from="UIs/PurchasingUI" to="." method="_on_purchasing_ui_set_labels"]
[connection signal="timeout" from="Enemy1Timer" to="." method="_on_enemy_1_timer_timeout"]
[connection signal="timeout" from="Enemy2Timer" to="." method="_on_enemy_2_timer_timeout"]
[connection signal="timeout" from="Enemy3Timer" to="." method="_on_enemy_3_timer_timeout"]
[connection signal="timeout" from="Enemy4Timer" to="." method="_on_enemy_4_timer_timeout"]
[connection signal="timeout" from="Enemy5Timer" to="." method="_on_enemy_5_timer_timeout"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_restart_timer_timeout"]
